# repo-heatlh-checker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
repo_checker/: checks.py  cli.py  result.py  runner.py
tests/: test_checks.py
